2003-01-27    John E. Joganic <john@joganic.com>

	* Changed macros from WAC_ to WCM_ due to bug in Mandrake 9 autoconf.

2003-01-26    John E. Joganic <john@joganic.com>

	* Merged Dean Townsley's Acer C100 patch
	* Changed internal device identification model to handle new tablets

2003-01-25    John E. Joganic <john@joganic.com>

	* Added configuration option to disable non-linux code
	* Moved USB code from wacdump into wacusb.c

2003-01-16    John E. Joganic <john@joganic.com>

	* Added check for Mandrake .o.gz modules in configure

2003-01-10    John E. Joganic <john@joganic.com>

	* Changed bit macros for Graphire

2003-01-09    John E. Joganic <john@joganic.com>

	* Fixed Intuos and Intuos2 sizes
	* Added Gilbert Ramirez's no-merge-constants patch
	* Added patch for HID_QUIRK on 2.4.18

2003-01-01    John E. Joganic <john@joganic.com>

	* Added volito to hid-core.c.
	* Fixed volito report #99.
	* Updated volito ranges.
	* Fixed wacdump refresh
	* Fixed 2D mouse buttons in xf86Wacom.c

2002-12-31    John E. Joganic <john@joganic.com>

	* Added Ping Cheng's new tool IDs.
	* Fix for unknown report #1 using simple kernel thread
	* Added automatic module loading for usb wacom and evdev

2002-12-26    John E. Joganic <john@joganic.com>

	* Fixed tablet initialization

2002-12-21    John E. Joganic <john@joganic.com>

	* Moved project to SourceForge as linuxwacom.

2002-12-21    John E. Joganic <john@joganic.com>

	* Added serial code to wacdump
	* Added serial protocols IV 1.0 - 1.4.
	* Added serial protocol V 1.0 - 1.1.
	* Intuos mouse wheels are now positive when rolled backwards per PS/2
	  Intellimouse convention
	* Added Intuos2 to xf86Wacom.c

2002-12-17    John E. Joganic <john@joganic.com>

	* Merged code from 2.4.20 hid-core.c
	* Added configuration code to handle kernels still at 2.4.19
	* Split wacdump curses code into wacscrn.c to solve namespace collision
	* Added volito to wacom.c

2002-12-15    John E. Joganic <john@joganic.com>
