@@ -1,6 +1,7 @@
 2003-01-27    John E. Joganic <john@joganic.com>
 
 	* Changed macros from WAC_ to WCM_ due to bug in Mandrake 9 autoconf.
+	* Added timeout for reset and tablet detection in wacserial.c
 
 2003-01-26    John E. Joganic <john@joganic.com>
 
